--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -147,6 +147,7 @@
 <!-- dynamic javascript templates -->
 <script defer type='text/javascript' src="{% url 'calendar.js' %}"></script>
 <script defer type='text/javascript' src="{% url 'nav.js' %}"></script>
+<script defer type='text/javascript' src="{% url 'permissions.js' %}"></script>
 <script defer type='text/javascript' src="{% url 'settings.js' %}"></script>
 
 <!-- translated javascript templates-->
