--- a/InvenTree/order/templates/order/sales_orders.html
+++ b/InvenTree/order/templates/order/sales_orders.html
@@ -27,10 +27,8 @@
 
 <div class='panel-content'>
     <div id='table-buttons'>
-        <div class='button-toolbar container-fluid' style='float: right;'>
-            <div class='btn-group'>
-                {% include "filter_list.html" with id="salesorder" %}
-            </div>
+        <div class='button-toolbar'>
+            {% include "filter_list.html" with id="salesorder" %}
         </div>
     </div>
 
