--- a/InvenTree/company/templates/company/index.html
+++ b/InvenTree/company/templates/company/index.html
@@ -24,11 +24,11 @@
 
 <div class='panel-content'>
 
-    <div id='button-toolbar'>
+    <div id='company-button-toolbar'>
         {% include "filter_list.html" with id='company' %}
     </div>
 
-    <table class='table table-striped table-condensed' id='company-table' data-toolbar='#button-toolbar'>
+    <table class='table table-striped table-condensed' id='company-table' data-toolbar='#company-button-toolbar'>
     </table>
 </div>
 
