--- a/InvenTree/company/templates/company/supplier_part.html
+++ b/InvenTree/company/templates/company/supplier_part.html
@@ -234,9 +234,7 @@ src="{% static 'img/blank_image.png' %}"
     </div>
     <div class='panel-content'>
         <div id='button-bar'>
-            <div class='btn-group' role='group'>
-                {% include "filter_list.html" with id='purchaseorder' %}
-            </div>
+            {% include "filter_list.html" with id='purchaseorder' %}
         </div>
         <table class='table table-striped table-condensed po-table' id='purchase-order-table' data-toolbar='#button-bar'>
         </table>
@@ -258,10 +256,8 @@ src="{% static 'img/blank_image.png' %}"
         </div>
     </div>
     <div class='panel-content'>
-        <div id='price-break-toolbar' class='btn-group'>
-            <div class='btn-group' role='group'>
-                {% include "filter_list.html" with id='supplierpricebreak' %}
-            </div>
+        <div id='price-break-toolbar'>
+            {% include "filter_list.html" with id='supplierpricebreak' %}
         </div>
 
         <table class='table table-striped table-condensed' id='price-break-table' data-toolbar='#price-break-toolbar'>
