Refactor "needed for build" table
- Now shows amount actually needed

--- a/InvenTree/templates/InvenTree/index.html
+++ b/InvenTree/templates/InvenTree/index.html
@@ -25,61 +25,6 @@
 
 {{ block.super }}
 
-function addHeaderTitle(title) {
-
-    addSidebarHeader({
-        text: title,
-    });
-}
-
-function addHeaderAction(label, title, icon, options) {
-
-    // Construct a "badge" to add to the sidebar item
-    var badge = `
-    <span id='sidebar-badge-${label}' class='sidebar-item-badge badge rounded-pill badge-right bg-dark'>
-        <span class='fas fa-spin fa-spinner'></span>
-    </span>
-    `;
-
-    addSidebarItem({
-        label: label,
-        text: title,
-        icon: icon,
-        content_after: badge
-    });
-
-    // Add a detail item to the detail item-panel
-    $("#detail-panels").append(
-        `<div class='panel panel-inventree panel-hidden' id='panel-${label}'>
-            <div class='panel-heading'>
-                <h4>${title}</h4>
-            </div>
-            <div class='panel-content'>
-                <table class='table table-condensed table-striped' id='table-${label}'></table>
-            </div>
-        </div>`
-    );
-
-    let table_name = `#table-${label}`;
-
-    // Connect a callback to the table
-    $(table_name).on('load-success.bs.table', function(data) {
-
-        let options = $(table_name).bootstrapTable('getOptions');
-
-        let count = options.totalRows;
-
-        let badge = $(`#sidebar-badge-${label}`);
-
-        badge.html(count);
-
-        if (count > 0) {
-            badge.removeClass('bg-dark');
-            badge.addClass('bg-primary');
-        }
-    });
-}
-
 {% settings_value 'HOMEPAGE_HIDE_INACTIVE' user=request.user as hide_inactive %}
 {% settings_value 'HOMEPAGE_PART_STARRED' user=request.user as setting_part_starred %}
 {% settings_value 'HOMEPAGE_CATEGORY_STARRED' user=request.user as setting_category_starred %}
@@ -200,16 +145,8 @@ loadSimplePartTable("#table-depleted-stock", "{% url 'api-part-list' %}", {
 
 {% if setting_stock_needed %}
 addHeaderAction('stock-to-build', '{% trans "Required for Build Orders" %}', 'fa-bullhorn');
-loadSimplePartTable("#table-stock-to-build", "{% url 'api-part-list' %}", {
-    name: 'parts-required-to-build',
-    params: {
-        stock_to_build: true,
-        {% if hide_inactive %}
-        active: true,
-        {% endif %}
-    },
-    name: "to_build_parts",
-});
+
+loadRequiredForBuildsPartsTable("#table-stock-to-build", {});
 {% endif %}
 
 {% if expiry %}
