--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -146,6 +146,7 @@
 
 <!-- dynamic javascript templates -->
 <script defer type='text/javascript' src="{% url 'calendar.js' %}"></script>
+<script defer type='text/javascript' src="{% url 'index.js' %}"></script>
 <script defer type='text/javascript' src="{% url 'nav.js' %}"></script>
 <script defer type='text/javascript' src="{% url 'settings.js' %}"></script>
 
