--- a/InvenTree/templates/InvenTree/index.html
+++ b/InvenTree/templates/InvenTree/index.html
@@ -106,6 +106,7 @@ loadSimplePartTable("#table-bom-validation", "{% url 'api-part-list' %}", {
 {% if setting_stock_recent %}
 addHeaderAction('recently-updated-stock', '{% trans "Recently Updated" %}', 'fa-clock');
 loadStockTable($('#table-recently-updated-stock'), {
+    disableFilters: true,
     params: {
         part_detail: true,
         ordering: "-updated",
@@ -154,6 +155,7 @@ loadRequiredForBuildsPartsTable("#table-stock-to-build", {});
 {% if setting_stock_expired %}
 addHeaderAction('expired-stock', '{% trans "Expired Stock" %}', 'fa-calendar-times');
 loadStockTable($("#table-expired-stock"), {
+    disableFilters: true,
     params: {
         expired: true,
         location_detail: true,
@@ -162,12 +164,14 @@ loadStockTable($("#table-expired-stock"), {
         active: true,
         {% endif %}
     },
+    name: 'expired-stock',
 });
 {% endif %}
 
 {% if setting_stock_stale %}
 addHeaderAction('stale-stock', '{% trans "Stale Stock" %}', 'fa-stopwatch');
 loadStockTable($("#table-stale-stock"), {
+    disableFilters: true,
     params: {
         stale: true,
         expired: false,
@@ -177,6 +181,7 @@ loadStockTable($("#table-stale-stock"), {
         active: true,
         {% endif %}
     },
+    name: 'stale-stock',
 });
 {% endif %}
 
