Required for order fix (#5077)
* Fix part tables on index page

- Stop table filters overriding each other

* Refactor "needed for build" table

- Now shows amount actually needed

* Fix typo

* js fix

* linting

* Fix warning messages on index page

* js linting

--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -161,6 +161,7 @@
 <script defer type='text/javascript' src="{% i18n_static 'filters.js' %}"></script>
 <script defer type='text/javascript' src="{% i18n_static 'forms.js' %}"></script>
 <script defer type='text/javascript' src="{% i18n_static 'helpers.js' %}"></script>
+<script defer type='text/javascript' src="{% i18n_static 'index.js' %}"></script>
 <script defer type='text/javascript' src="{% i18n_static 'label.js' %}"></script>
 <script defer type='text/javascript' src="{% i18n_static 'modals.js' %}"></script>
 <script defer type='text/javascript' src="{% i18n_static 'model_renderers.js' %}"></script>
