--- a/InvenTree/label/templates/label/stocklocation/qr.html
+++ b/InvenTree/label/templates/label/stocklocation/qr.html
@@ -18,5 +18,5 @@
 
 {% block content %}
 
-<img class='qr' alt="{% trans 'QC Code' %}" src='{% qrcode qr_data %}'>
+<img class='qr' alt="{% trans 'QR Code' %}" src='{% qrcode qr_data %}'>
 {% endblock content %}
