--- a/InvenTree/templates/InvenTree/settings/po.html
+++ b/InvenTree/templates/InvenTree/settings/po.html
@@ -12,6 +12,7 @@
     <tbody>
         {% include "InvenTree/settings/setting.html" with key="PURCHASEORDER_REFERENCE_PATTERN" %}
         {% include "InvenTree/settings/setting.html" with key="PURCHASEORDER_EDIT_COMPLETED_ORDERS" icon='fa-edit' %}
+        {% include "InvenTree/settings/setting.html" with key="PURCHASEORDER_REQUIRE_APPROVAL" icon='fa-check' %}
     </tbody>
 </table>
 {% endblock content %}
