Add common label style field for multiple labels per page

--- a/InvenTree/label/templates/label/multipage_label_base.html
+++ b/InvenTree/label/templates/label/multipage_label_base.html
@@ -41,6 +41,8 @@
         body {
             margin: 0mm !important;
         }
+
+        {{ multipage_common_style }}
         {% endlocalize %}
     </style>
 </head>
